--- a/frontend/vistas/blog.html
+++ b/frontend/vistas/blog.html
@@ -48,19 +48,59 @@
 
     <!-- MAIN -->
     <main>
-        
+
     </main>
 
 
     <!-- FOOTER -->
     <footer class="bg-primary text-white pt-4 pb-4 mt-auto">
         <div class="container text-center text-md-left">
+            <div class="row text-center text-md-left">
+
+                <!-- PawFinder -->
+                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+                    <h5 class="text-uppercase mb-4">Pawfinder</h5>
+
+                    <ul class="list-unstyled">
+                        <li class="mb-2">
+                            <a href="./index.html" class="text-white">Inicio</a>
+                        </li>
+                        <li class="mb-2">
+                            <a href="./lista_animales.html" class="text-white">Animales</a>
+                        </li>
+                        <li class="mb-2">
+                            <a href="./blog.html" class="text-white">Blog</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <!-- INFORMACION -->
+                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+                    <h5 class="text-uppercase mb-4">Legal</h5>
+                    <p><a href="#privacidad" class="text-white">Política Privacidad</a></p>
+                    <p><a href="#terminos" class="text-white">Términos Servicio</a></p>
+                    <p><a href="#cookies" class="text-white">Cookies</a></p>
+                </div>
+
+                <!-- REDES SOCIALES -->
+                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+                    <h5 class="text-uppercase mb-4">Síguenos</h5>
+
+                    <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998;" href="#!"
+                        role="button"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-primary btn-floating m-1" style="background-color: #0082ca;" href="#!"
+                        role="button"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-primary btn-floating m-1" style="background-color: #333333;" href="#!"
+                        role="button"><i class="fab fa-github"></i></a>
+                </div>
+            </div>
+
+
+            <hr class="mb-4" style="border-top: 1px solid rgba(255, 255, 255, 0.712);">
+
             <div class="row align-items-center">
                 <div class="col-12 text-center">
-                    <p class="mb-0"> © 2025 Copyright:
-                        <a href="./index.html">
-                            <strong class="text-white">PawFinder</strong>
-                        </a>
+                    <p class="mb-0"> © 2025 Copyright: <a href="./index.html"><strong class="text-white">PawFinder</strong></a>
                     </p>
                 </div>
             </div>
