--- a/frontend/vistas/index.html
+++ b/frontend/vistas/index.html
@@ -48,7 +48,13 @@
 
     <!-- MAIN -->
     <main>
+        <!-- Seccion 1 foto?-->
 
+        <!-- Seccion de mascotas -->
+
+        <!-- Seccion de testimonios -->
+
+        <!-- Seccion de blog -->
     </main>
 
 
