--- a/frontend/vistas/registro_global.html
+++ b/frontend/vistas/registro_global.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Vanessa Lopez Pastor">
     <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
-    <title>Registro</title>
+    <title>Inicio</title>
 
     <!-- Bootstap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -15,6 +15,57 @@
 </head>
 
 <body>
+    <!-- NAV -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="../img/logo_pawFinder1.png" alt="PawFinder Logo" width="200" height="90">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./lista_animales.html">Animales</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./blog.html">Blog</a>
+                    </li>
+                </ul>
+                <form class="d-flex">
+                    <a href="./login.html" class="btn btn-outline-primary me-2">Login</a>
+                    <a href="./registro_global.html" class="btn btn-primary">Registro</a>
+                </form>
+            </div>
+        </div>
+    </nav>
+
+    <!-- MAIN -->
+    <main>
+        
+    </main>
+
+
+    <!-- FOOTER -->
+    <footer class="bg-primary text-white pt-4 pb-4 mt-auto">
+        <div class="container text-center text-md-left">
+            <div class="row align-items-center">
+                <div class="col-12 text-center">
+                    <p class="mb-0"> © 2025 Copyright:
+                        <a href="./index.html">
+                            <strong class="text-white">PawFinder</strong>
+                        </a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
     <!-- script bootstrap -->
@@ -23,6 +74,9 @@
         crossorigin="anonymous"></script>
 
     <script scr="../bootstrap-5.3.3/dist/js/bootstrap.min.js"></script>
+
+    <!-- script fontawesome -->
+    <script src="https://kit.fontawesome.com/4c881875bb.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
