--- a/frontend/vistas/index.html
+++ b/frontend/vistas/index.html
@@ -18,7 +18,7 @@
     <!-- NAV -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="./index.html">
                 <img src="../img/logo_pawFinder1.png" alt="PawFinder Logo" width="200" height="90">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
