--- a/frontend/vistas/login.html
+++ b/frontend/vistas/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Vanessa Lopez Pastor">
     <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
-    <title>Inicio</title>
+    <title>Login</title>
 
     <!-- Bootstap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -18,7 +18,7 @@
     <!-- NAV -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="./index.html">
                 <img src="../img/logo_pawFinder1.png" alt="PawFinder Logo" width="200" height="90">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -47,8 +47,36 @@
     </nav>
 
     <!-- MAIN -->
-    <main>
-        
+    <main class="container flex-grow-1 d-flex align-items-center justify-content-center my-5">
+        <div class="col-md-6 col-lg-4">
+            <div class="card shadow border-0">
+                <!-- Titulo -->
+                <div class="auth-card-header d-flex justify-content-center my-2">
+                    <h2 class="h4 mb-0">Iniciar Sesión</h2>
+                </div>
+                <!-- formulario -->
+                <div class="card-body p-4 p-lg-5">
+                    <form id="loginForm" method="POST" action="/api/auth/login">
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email</label>
+                            <input type="email" class="form-control" id="email" name="email" placeholder="prueba@prueba.com" required>
+                        </div>
+                        <div class="mb-4">
+                            <label for="password" class="form-label">Contraseña</label>
+                            <input type="password" class="form-control" id="password" name="password" placeholder="***********" required>
+                        </div>
+                        <div class="d-grid mb-3">
+                            <button type="submit" class="btn btn-primary">Entrar</button>
+                        </div>
+
+                        <div class="text-center">
+                            <a href="#" class="text-muted me-2"><small>¿Olvidaste tu contraseña?</small></a> |
+                            <a href="registro_global.html" class="text-muted ms-2"><small>Crear una cuenta</small></a>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </main>
 
 
