--- a/frontend/vistas/registro_adoptante.html
+++ b/frontend/vistas/registro_adoptante.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Vanessa Lopez Pastor">
     <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
-    <title>Inicio</title>
+    <title>Registro adoptantes</title>
 
     <!-- Bootstap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -18,7 +18,7 @@
     <!-- NAV -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="./index.html">
                 <img src="../img/logo_pawFinder1.png" alt="PawFinder Logo" width="200" height="90">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
