--- a/frontend/vistas/index.html
+++ b/frontend/vistas/index.html
@@ -40,7 +40,7 @@
                 </ul>
                 <form class="d-flex">
                     <a href="./login.html" class="btn btn-outline-primary me-2">Login</a>
-                    <a href="./registro_global.html" class="btn btn-primary">Registro</a>
+                    <a href="./registro_global.html" class="btn btn-primary"><i class="fa-solid fa-paw"></i> Registro</a>
                 </form>
             </div>
         </div>
