--- a/frontend/vistas/login.html
+++ b/frontend/vistas/login.html
@@ -40,7 +40,7 @@
                 </ul>
                 <form class="d-flex">
                     <a href="./login.html" class="btn btn-outline-primary me-2">Login</a>
-                    <a href="./registro_global.html" class="btn btn-primary">Registro</a>
+                    <a href="./registro_global.html" class="btn btn-primary"><i class="fa-solid fa-paw"></i> Registro</a>
                 </form>
             </div>
         </div>
@@ -56,7 +56,7 @@
                 </div>
                 <!-- formulario -->
                 <div class="card-body p-4 p-lg-5">
-                    <form id="loginForm" method="POST" action="/api/auth/login">
+                    <form id="loginForm" method="POST">
                         <div class="mb-3">
                             <label for="email" class="form-label">Email</label>
                             <input type="email" class="form-control" id="email" name="email" placeholder="prueba@prueba.com" required>
