--- a/frontend/vistas/registro_global.html
+++ b/frontend/vistas/registro_global.html
@@ -40,15 +40,31 @@
                 </ul>
                 <form class="d-flex">
                     <a href="./login.html" class="btn btn-outline-primary me-2">Login</a>
-                    <a href="./registro_global.html" class="btn btn-primary">Registro</a>
+                    <a href="./registro_global.html" class="btn btn-primary"><i class="fa-solid fa-paw"></i> Registro</a>
                 </form>
             </div>
         </div>
     </nav>
 
     <!-- MAIN -->
-    <main>
-        
+    <main class="container flex-grow-1 d-flex align-items-center justify-content-center my-5">
+        <div class="col-md-8 col-lg-6 text-center">
+            <h2 class="mb-3 primary-color">Crear una Cuenta</h2>
+            <p class="lead text-secondary mb-4">Selecciona cómo quieres unirte a nuestra comunidad.</p>
+
+            <div class="d-grid gap-3">
+                <a href="registro_adoptante.html" class="btn btn-primary btn-lg p-3">
+                    <i class="fas fa-user me-2"></i> Quiero Adoptar (Usuario)
+                </a>
+                <a href="registro_protectora.html" class="btn btn-secondary btn-lg p-3">
+                    <i class="fa-solid fa-building-shield"></i> Soy una Protectora
+                </a>
+            </div>
+
+            <div class="mt-4">
+                <a href="login.html" class="text-muted"><small>¿Ya tienes una cuenta? Inicia Sesión</small></a>
+            </div>
+        </div>
     </main>
 
 
