--- a/frontend/vistas/registro_protectora.html
+++ b/frontend/vistas/registro_protectora.html
@@ -40,17 +40,127 @@
                 </ul>
                 <form class="d-flex">
                     <a href="./login.html" class="btn btn-outline-primary me-2">Login</a>
-                    <a href="./registro_global.html" class="btn btn-primary">Registro</a>
+                    <a href="./registro_global.html" class="btn btn-primary"><i class="fa-solid fa-paw"></i>
+                        Registro</a>
                 </form>
             </div>
         </div>
     </nav>
 
+
     <!-- MAIN -->
-    <main>
+    <main class="flex-grow-1 p-0">
+        <div class="row g-0 h-100" style="min-height: 80vh;">
 
+            <!-- columna de la imagen -->
+            <div class="col-md-6 d-none d-md-block h-200 p-0 overflow-hidden">
+                <img src="../img/registro.jpg " alt="Perro feliz en brazos" class="w-100 h-100"
+                    style="object-fit: cover; object-position: center;">
+            </div>
+
+            <!-- columna del form -->
+            <div class="col-md-6 d-flex align-items-center justify-content-center py-4 px-3 px-sm-4 px-lg-5">
+                <div class="w-100" style="max-width: 500px;">
+
+                    <h2 class="text-center mb-4 primary-color fw-bold h3">Registro de Protectora</h2>
+
+                    <!-- labels e inputs -->
+                    <div class="card shadow-sm border-0">
+                        <div class="card-body p-4">
+                            <form id="registerUserForm" method="POST">
+                                <div class="row g-3 mb-3">
+                                    <div class="col-sm-6">
+                                        <label for="protectiveName" class="form-label">Nombre Protectora
+                                            <span class="text-danger">*</span>
+                                        </label>
+                                        <input type="text" class="form-control" id="protectiveName"
+                                            name="protectiveName"  placeholder="Protectora de Torrevieja" required>
+                                    </div>
+
+                                    <div class="col-sm-6">
+                                        <label for="cif" class="form-label">CIF/NIF <span
+                                                class="text-danger">*</span></label>
+                                        <input type="text" class="form-control" id="cif" name="cif" placeholder="B12345678" required>
+                                    </div>
+                                </div>
+
+                                <div class="mb-3">
+                                    <label for="email" class="form-label">Email Contacto
+                                        <span class="text-danger">*</span>
+                                    </label>
+                                    <input type="email" class="form-control" id="email" name="email" placeholder="protectora@protectora.com" required>
+                                </div>
+
+                                <div class="mb-3">
+                                    <label for="phone" class="form-label">Teléfono Contacto
+                                        <span class="text-danger">*</span>
+                                    </label>
+                                    <input type="tel" class="form-control" id="phone" name="phone" placeholder="+34 XXX XX XX XX" required>
+                                </div>
+
+                                <div class="mb-3">
+                                    <label for="address" class="form-label">Dirección Completa
+                                        <span class="text-danger">*</span>
+                                    </label>
+                                    <textarea class="form-control" id="address" name="address" rows="1"
+                                        placeholder="C\ Inventada nº69" required></textarea>
+                                </div>
+
+                                <div class="mb-3">
+                                    <label for="province" class="form-label">Provincia
+                                        <span class="text-danger">*</span>
+                                    </label>
+                                    <input type="text" class="form-control" id="province" name="province"
+                                        placeholder="Ej: Alicante" required>
+                                </div>
+
+                                <div class="row g-3 mb-3">
+                                    <div class="col-sm-6">
+                                        <label for="password" class="form-label">Contraseña
+                                            <span class="text-danger">*</span>
+                                        </label>
+                                        <input type="password" class="form-control" id="password" name="password"
+                                        placeholder="***********" required>
+                                    </div>
+
+                                    <div class="col-sm-6">
+                                        <label for="passwordConfirm" class="form-label">Confirmar Contraseña
+                                            <span class="text-danger">*</span>
+                                        </label>
+                                        <input type="password" class="form-control" id="passwordConfirm"
+                                        placeholder="***********" name="passwordConfirm" required>
+                                    </div>
+                                </div>
+
+                                <input type="hidden" name="role" value="Refugio">
+                                <div class="form-check mb-3">
+                                    <input class="form-check-input" type="checkbox" value="" id="termsCheckProtective"
+                                        required>
+                                    <label class="form-check-label small" for="termsCheckProtective">
+                                        Confirmo que represento a la protectora y acepto <a href="#">Términos</a> y <a
+                                            href="#">Privacidad</a>.
+                                        <span class="text-danger">*</span>
+                                    </label>
+                                </div>
+
+                                <!-- botones -->
+                                <div class="d-grid gap-2 d-sm-flex justify-content-sm-between align-items-center">
+                                    <a href="registro_global.html" class="btn btn-link text-secondary p-0"><small><i
+                                                class="fas fa-arrow-left me-1"></i> Volver</small></a>
+                                    <button type="submit" class="btn btn-primary">Enviar Registro</button>
+                                </div>
+
+                                <div class="text-center mt-3">
+                                    <a href="login.html" class="text-muted"><small>¿Ya tienes cuenta? Inicia
+                                            Sesión</small></a>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
-
 
     <!-- FOOTER -->
     <footer class="bg-primary text-white pt-4 pb-4 mt-auto">
