Empezado detalle animal
empezada la vista de detalles de animal

--- a/frontend/vistas/animal_detalle.html
+++ b/frontend/vistas/animal_detalle.html
@@ -40,15 +40,55 @@
                 </ul>
                 <form class="d-flex">
                     <a href="./login.html" class="btn btn-outline-primary me-2">Login</a>
-                    <a href="./registro_global.html" class="btn btn-primary"><i class="fa-solid fa-paw"></i> Registro</a>
+                    <a href="./registro_global.html" class="btn btn-primary"><i class="fa-solid fa-paw"></i>
+                        Registro</a>
                 </form>
             </div>
         </div>
     </nav>
 
     <!-- MAIN -->
-    <main>
+    <main class="container" style="padding-top: 20px;">
+        <!-- menu -->
+        <section aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="#">Inicio</a></li>
+                <li class="breadcrumb-item"><a href="#">Animales</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Max</li>
+            </ol>
+        </section>
 
+        <!-- foto mascota -->
+
+        <!-- info mascota -->
+
+
+        <div class="row g-5">
+            <div class="col-md-5">
+                <!-- info protectora tarjeta -->
+                <div class="card mt-4 bg-light border-0">
+                    <div class="card-body">
+                        <h5 class="card-title primary-color mb-3"><i
+                                class="fa-solid fa-building-shield me-2"></i>Información de la Protectora</h5>
+                        <p class="card-text mb-1"><strong>Nombre:</strong> Protectora Torrevieja</p>
+                        <p class="card-text mb-1"><strong>Contacto:</strong>
+                            <a href="">protectora@protectora.com</a> | 96X XXX XXX
+                        </p>
+                        <div class="mt-3">(Mapa) <br>
+                            <!-- foto de ejemplo -->
+                            <img src="../img/mapaEjemplo.png" alt="mapa ejemplo" style="height: 200px;">
+                        </div>
+                    </div>
+                </div>
+
+                <!-- boton adoptame -->
+                <div class="d-grid mt-4">
+                    <button class="btn btn-danger btn-lg" id="adoptButton">
+                        <i class="fas fa-heart me-2"></i>Adoptarme
+                    </button>
+                </div>
+            </div>
+        </div>
     </main>
 
 
@@ -100,7 +140,8 @@
 
             <div class="row align-items-center">
                 <div class="col-12 text-center">
-                    <p class="mb-0"> © 2025 Copyright: <a href="./index.html"><strong class="text-white">PawFinder</strong></a>
+                    <p class="mb-0"> © 2025 Copyright: <a href="./index.html"><strong
+                                class="text-white">PawFinder</strong></a>
                     </p>
                 </div>
             </div>
