--- a/frontend/vistas/lista_animales.html
+++ b/frontend/vistas/lista_animales.html
@@ -148,7 +148,7 @@
                 </div>
 
                 <!-- PAGINADO -->
-                <nav aria-label="..." class="mt-5 d-flex justify-content-center">
+                <article aria-label="..." class="mt-5 d-flex justify-content-center">
                     <ul class="pagination">
                         <li class="page-item disabled">
                             <a class="page-link">Anterior</a>
@@ -170,7 +170,7 @@
                             <a class="page-link" href="#">Siguiente</a>
                         </li>
                     </ul>
-                </nav>
+                </article>
 
     </main>
 
