--- a/frontend/vistas/blog.html
+++ b/frontend/vistas/blog.html
@@ -40,15 +40,76 @@
                 </ul>
                 <form class="d-flex">
                     <a href="./login.html" class="btn btn-outline-primary me-2">Login</a>
-                    <a href="./registro_global.html" class="btn btn-primary"><i class="fa-solid fa-paw"></i> Registro</a>
+                    <a href="./registro_global.html" class="btn btn-primary"><i class="fa-solid fa-paw"></i>
+                        Registro</a>
                 </form>
             </div>
         </div>
     </nav>
 
     <!-- MAIN -->
-    <main>
+    <main class="container" style="padding-top: 20px;">
+        <!-- tarjetas de anuncios blog -->
+        <article class="blog-post mb-5">
+            <div class="row g-0 border rounded overflow-hidden flex-md-row shadow-sm h-md-250 position-relative">
+                <div class="col-auto d-none d-lg-block">
+                    <img src="../img/registro.jpg" width="500" height="250" style="object-fit: cover;" alt="Blog Image">
+                </div>
 
+                <div class="col p-4 d-flex flex-column position-static">
+                    <strong class="d-inline-block mb-2 primary-color">Prueba de blog </strong>
+                    <h3 class="mb-1">Titutlo</h3>
+                    <div class="mb-1 text-muted">23 Mayo, 2024 por protectora</div>
+                    <p class="card-text mb-auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure deserunt
+                        laborum veritatis. Non delectus expedita illum tempora est temporibus doloremque quo, sit
+                        possimus ad harum at aliquam deleniti dolorem ipsa?</p>
+                    <a href="#" class="stretched-link link-secondary">Continuar leyendo</a>
+                </div>
+            </div>
+        </article>
+
+        <article class="blog-post mb-5">
+            <div class="row g-0 border rounded overflow-hidden flex-md-row shadow-sm h-md-250 position-relative">
+                <div class="col-auto d-none d-lg-block">
+                    <img src="../img/registro.jpg" width="500" height="250" style="object-fit: cover;" alt="Blog Image">
+                </div>
+
+                <div class="col p-4 d-flex flex-column position-static">
+                    <strong class="d-inline-block mb-2 primary-color">Prueba de blog2</strong>
+                    <h3 class="mb-1">Titutlo2</h3>
+                    <div class="mb-1 text-muted">23 Mayo, 2024 por protectora</div>
+                    <p class="card-text mb-auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure deserunt
+                        laborum veritatis. Non delectus expedita illum tempora est temporibus doloremque quo, sit
+                        possimus ad harum at aliquam deleniti dolorem ipsa?</p>
+                    <a href="#" class="stretched-link link-secondary">Continuar leyendo</a>
+                </div>
+            </div>
+        </article>
+
+        <!-- PAGINADO -->
+        <article aria-label="..." class="mt-5 d-flex justify-content-center">
+            <ul class="pagination">
+                <li class="page-item disabled">
+                    <a class="page-link">Anterior</a>
+                </li>
+
+                <li class="page-item active">
+                    <a class="page-link" href="#">1</a>
+                </li>
+
+                <li class="page-item" aria-current="page">
+                    <a class="page-link" href="#">2</a>
+                </li>
+
+                <li class="page-item">
+                    <a class="page-link" href="#">3</a>
+                </li>
+
+                <li class="page-item">
+                    <a class="page-link" href="#">Siguiente</a>
+                </li>
+            </ul>
+        </article>
     </main>
 
 
@@ -100,7 +161,8 @@
 
             <div class="row align-items-center">
                 <div class="col-12 text-center">
-                    <p class="mb-0"> © 2025 Copyright: <a href="./index.html"><strong class="text-white">PawFinder</strong></a>
+                    <p class="mb-0"> © 2025 Copyright: <a href="./index.html"><strong
+                                class="text-white">PawFinder</strong></a>
                     </p>
                 </div>
             </div>
