--- a/frontend/vistas/perfil.html
+++ b/frontend/vistas/perfil.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Vanessa Lopez Pastor">
     <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
-    <title>Detalles mascota</title>
+    <title>Blog</title>
 
     <!-- Bootstap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -48,72 +48,8 @@
     </nav>
 
     <!-- MAIN -->
-    <main class="container" style="padding-top: 20px; padding-bottom: 20px;">
-        <!-- menu -->
-        <section aria-label="breadcrumb">
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="#">Inicio</a></li>
-                <li class="breadcrumb-item"><a href="#">Animales</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Max</li>
-            </ol>
-        </section>
-
-        <div class="row g-5">
-            <!-- foto mascota -->
-            <div class="col-md-7">
-                <img src="../img/registro.jpg" class="img-fluid rounded shadow-sm mb-3 placeholder-img-lg"
-                    alt="imagen mascota">
-            </div>
-
-            <!-- info mascota -->
-            <div class="col-md-5">
-                <h1 class="mb-2 primary-color">Max</h1>
-                <p class="text-muted mb-3">
-                    <i class="fas fa-venus-mars me-1"></i> Macho
-                    <span class="mx-2">|</span>
-                    <i class="fas fa-map-marker-alt me-1"></i> Alicante
-                </p>
-
-                <div class="mb-3">
-                    <span class="badge bg-secondary me-1">Perro</span>
-                    <span class="badge bg-secondary me-1">Mestizo</span>
-                    <span class="badge bg-secondary me-1">Adulto</span>
-                    <span class="badge bg-secondary">Mediano</span>
-                </div>
-
-                <h4 class="mt-4">Descripción</h4>
-                <p class="text-secondary">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti officiis debitis distinctio
-                    facere, neque reiciendis eaque eveniet molestias voluptatibus necessitatibus recusandae. Optio
-                    exercitationem culpa eius sapiente esse iusto, soluta a!
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis ad unde cum quam eveniet quis libero
-                    dolore molestias aut, fuga architecto quos ab natus sunt voluptatum iure aliquid quia veniam?
-                </p>
-
-                    <!-- info protectora tarjeta -->
-                    <div class="card mt-4 bg-light border-0">
-                        <div class="card-body">
-                            <h5 class="card-title primary-color mb-3"><i
-                                    class="fa-solid fa-building-shield me-2"></i>Información de la Protectora</h5>
-                            <p class="card-text mb-1"><strong>Nombre:</strong> Protectora Torrevieja</p>
-                            <p class="card-text mb-1"><strong>Contacto:</strong>
-                                <a href="">protectora@protectora.com</a> | 96X XXX XXX
-                            </p>
-                            <div class="mt-3">(Mapa) <br>
-                                <!-- foto de ejemplo -->
-                                <img src="../img/mapaEjemplo.png" alt="mapa ejemplo" style="height: 200px;">
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- boton adoptame -->
-                    <div class="d-grid mt-4">
-                        <button class="btn btn-danger btn-lg" id="adoptButton">
-                            <i class="fas fa-heart me-2"></i>Adoptame
-                        </button>
-                    </div>
-                </div>
-            </div>
+    <main>
+        
     </main>
 
 
