agregado href en breadcrumb

--- a/frontend/vistas/animal_detalle.html
+++ b/frontend/vistas/animal_detalle.html
@@ -52,8 +52,8 @@
         <!-- menu -->
         <section aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="#">Inicio</a></li>
-                <li class="breadcrumb-item"><a href="#">Animales</a></li>
+                <li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
+                <li class="breadcrumb-item"><a href="lista_animales.html">Animales</a></li>
                 <li class="breadcrumb-item active" aria-current="page">Max</li>
             </ol>
         </section>
