--- a/frontend/vistas/index.html
+++ b/frontend/vistas/index.html
@@ -40,7 +40,8 @@
                 </ul>
                 <form class="d-flex">
                     <a href="./login.html" class="btn btn-outline-primary me-2">Login</a>
-                    <a href="./registro_global.html" class="btn btn-primary"><i class="fa-solid fa-paw"></i> Registro</a>
+                    <a href="./registro_global.html" class="btn btn-primary"><i class="fa-solid fa-paw"></i>
+                        Registro</a>
                 </form>
             </div>
         </div>
@@ -51,6 +52,66 @@
         <!-- Seccion 1 foto?-->
 
         <!-- Seccion de mascotas -->
+        <div class="container mt-5 mb-5">
+            <h2 class="text-center mb-4">Mascotas en Adopción</h2>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <!-- tarjeta 1 -->
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="../img/registro.jpg" class="card-img-top pet-card-img" alt="max">
+                        <div class="card-body d-flex flex-column">
+                            <h5 class="card-title">Max</h5>
+                            <p class="card-text text-muted small">animal, genero, edad</p>
+                            <p class="card-text flex-grow-1">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                Quasi aspernatur sint, veritatis animi voluptatum nemo sapiente impedit. Repellendus
+                                similique sed nam dolorem minima quisquam corporis. Rerum nulla quos dolores
+                                repudiandae!</p>
+                            <a href="animal_detalle.html" class="btn btn-outline-primary mt-auto align-self-start">Ver
+                                Detalles</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- tarjeta 2 -->
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="../img/registro.jpg" class="card-img-top pet-card-img" alt="perro2">
+                        <div class="card-body d-flex flex-column">
+                            <h5 class="card-title">perro2</h5>
+                            <p class="card-text text-muted small">animal, genero, edad</p>
+                            <p class="card-text flex-grow-1">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                Quasi aspernatur sint, veritatis animi voluptatum nemo sapiente impedit. Repellendus
+                                similique sed nam dolorem minima quisquam corporis. Rerum nulla quos dolores
+                                repudiandae!.</p>
+                            <a href="#" class="btn btn-outline-primary mt-auto align-self-start">Ver
+                                Detalles</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- tarjeta 3 -->
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="../img/registro.jpg" class="card-img-top pet-card-img" alt="perro3">
+                        <div class="card-body d-flex flex-column">
+                            <h5 class="card-title">perro3</h5>
+                            <p class="card-text text-muted small">animal, genero, edad</p>
+                            <p class="card-text flex-grow-1">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                Quasi aspernatur sint, veritatis animi voluptatum nemo sapiente impedit. Repellendus
+                                similique sed nam dolorem minima quisquam corporis. Rerum nulla quos dolores
+                                repudiandae!
+                            </p>
+                            <a href="#" class="btn btn-outline-primary mt-auto align-self-start">Ver
+                                Detalles</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="text-center mt-4">
+                <a href="lista_animales.html" class="btn btn-secondary">Ver más mascotas</a>
+            </div>
+        </div>
 
         <!-- Seccion de testimonios -->
 
@@ -106,7 +167,8 @@
 
             <div class="row align-items-center">
                 <div class="col-12 text-center">
-                    <p class="mb-0"> © 2025 Copyright: <a href="./index.html"><strong class="text-white">PawFinder</strong></a>
+                    <p class="mb-0"> © 2025 Copyright: <a href="./index.html"><strong
+                                class="text-white">PawFinder</strong></a>
                     </p>
                 </div>
             </div>
