--- a/frontend/vistas/index.html
+++ b/frontend/vistas/index.html
@@ -50,6 +50,11 @@
     <!-- MAIN -->
     <main>
         <!-- Seccion 1 foto?-->
+        <div class="bg-light py-5 text-center">
+            <h1 class="display-5 fw-bold primary-color">Encuentra tu compañero ideal</h1>
+            <p class="fs-5 text-muted">Miles de mascotas esperan un hogar. Empieza tu búsqueda.</p>
+            <a class="btn btn-primary btn-lg mt-3" href="lista_animales.html" role="button">Buscar Mascotas</a>
+        </div>
 
         <!-- Seccion de mascotas -->
         <div class="container mt-5 mb-5">
@@ -114,8 +119,74 @@
         </div>
 
         <!-- Seccion de testimonios -->
+        <div class="bg-light py-5">
+            <div class="container">
+                <h2 class="text-center mb-4">Testimonios</h2>
+
+                <div class="row text-center">
+                    <div class="col-md-4 mb-3">
+                        <p class="fst-italic">"¡Encontramos a nuestro mejor amigo gracias a PawFinder!"</p>
+                        <p class="fw-bold">- Alex C.</p>
+                    </div>
+
+                    <div class="col-md-4 mb-3">
+                        <p class="fst-italic">"Una plataforma genial que conecta protectoras con adoptantes
+                            responsables. ¡Recomendado!"</p>
+                        <p class="fw-bold">- Protectora Prueba</p>
+                    </div>
+
+                    <div class="col-md-4 mb-3">
+                        <p class="fst-italic">"¡Adoptamos a un perrito hace un mes y no podríamos estar más felices!
+                            Gracias
+                            PawFinder."</p>
+                        <p class="fw-bold">- Vanessa L.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <!-- Seccion de blog -->
+        <div class="container mt-5 mb-5">
+            <h2 class="text-center mb-4">Blog</h2>
+
+            <div class="row row-cols-1 row-cols-md-2 g-4">
+
+                <div class="col">
+                    <div class="card">
+                        <img src="../img/registro.jpg" class="card-img-top" alt="Blog Post 1"
+                            style="height: 180px; object-fit: cover;">
+
+                        <div class="card-body">
+                            <h5 class="card-title">Titulo1</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi dicta
+                                omnis eius magnam dolorem, nam laborum sit sed id repellendus minus, perspiciatis
+                                consectetur blanditiis aperiam assumenda voluptatem corrupti quisquam cum?.</p>
+                            <a href="blog.html" class="btn btn-sm btn-outline-primary">Leer más</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="card">
+                        <img src="../img/registro.jpg" class="card-img-top" alt="Blog Post 2"
+                            style="height: 180px; object-fit: cover;">
+                        <div class="card-body">
+                            <h5 class="card-title">Titulo 2</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo nihil
+                                molestiae accusantium voluptas, sunt iste sint explicabo animi aut neque fugiat
+                                doloremque dicta minima, ex, quisquam eius? Eos, ullam aut.</p>
+                            <a href="blog.html" class="btn btn-sm btn-outline-primary">Leer más</a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="text-center mt-4">
+                <a href="blog.html" class="btn btn-secondary">Visitar el Blog</a>
+            </div>
+        </div>
+
     </main>
 
 
