--- a/frontend/pawFinder/register_protective.html
+++ b/frontend/pawFinder/register_protective.html
@@ -8,6 +8,8 @@
     <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
     <title>Registro protectoras</title>
 
+    <link rel="stylesheet" href="./src/css/style.css">
+
     <!-- Bootstap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -53,9 +55,18 @@
         <div class="row g-0 h-100" style="min-height: 80vh;">
 
             <!-- columna de la imagen -->
-            <div class="col-md-6 d-none d-md-block h-200 p-0 overflow-hidden">
+            <div id="containerEmotive" class="col-md-6 d-none d-md-block h-200 p-0 overflow-hidden">
+                <div id="emotive">
+                    <p>
+                        Tu dedicación transforma vidas. Al unirte a PawFinder, nos ayudas a tejer una red de
+                        compasión donde cada 'adiós' a un animal que se va adoptado, es un 'hola' a una nueva vida llena
+                        de alegría.
+                    </p>
+                </div>
+
                 <img src="/src/img/registro.jpg" alt="Perro feliz en brazos" class="w-100 h-100"
                     style="object-fit: cover; object-position: center;">
+
             </div>
 
             <!-- columna del form -->
