--- a/frontend/pawFinder/applications.html
+++ b/frontend/pawFinder/applications.html
@@ -105,10 +105,10 @@
 
         <div id="receivedFiltersContainer" class="mb-3 d-none">
             <div class="row g-2">
-                
+
                 <div class="col-md-6">
                     <label for="applicationStatusFilter" class="form-label small">Filtrar por Estado:</label>
-                    
+
                     <select id="applicationStatusFilter" class="form-select form-select-sm">
                         <option value="">Todos los Estados</option>
                         <option value="Pendiente" selected>Pendiente</option>
@@ -221,11 +221,12 @@
     </footer>
 
     <!-- script bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
-
-    <script scr="../bootstrap-5.3.3/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.min.js"
+        integrity="sha384-RuyvpeZCxMJCqVUGFI0Do1mQrods/hhxYlcVfGPOfQtPJh0JCw12tUAZ/Mv10S7D"
+        crossorigin="anonymous"></script>
 
     <!-- script fontawesome -->
     <script src="https://kit.fontawesome.com/4c881875bb.js" crossorigin="anonymous"></script>
